# automerge-playground

./: Cargo.toml
src/: main.rs
