[package]
name = "hello-automerge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.5.7"
autosurgeon = "0.8.3"
diamond-types = "1.0.0"
kyte = "0.1.0"
operational-transform = "0.6.1"
y-sync = "0.4.0"
yrs = "0.17.4"
